<resources>
    <string name="app_name" title="app_name">JCPlayer</string>
    <string name="text_long">test</string>
    <string name="text_short">test</string>
    <string name="play_initial_time">00:00</string>
    <string name="track_number">Track</string>
    <string name="description_icon_player">player icon</string>
    <string name="description_play_button">play/pause button</string>
    <string name="description_previous_button">previous button</string>
    <string name="description_next_button">next button</string>
    <string name="description_repeat_button">repeat button</string>
    <string name="description_shuffle_button">shuffle button</string>
</resources>
