<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/icon_player"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/description_icon_player"
        tools:src="@drawable/ic_default_notification" />

    <RelativeLayout
        android:id="@+id/relativePlayersControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/icon_player">

        <ImageButton
            android:id="@+id/btn_play_notification"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_play"
            android:backgroundTint="#7E6EEF"
            android:contentDescription="@string/description_play_button" />

        <ImageButton
            android:id="@+id/btn_prev_notification"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@id/btn_play_notification"
            android:background="@drawable/ic_previous"
            android:backgroundTint="#7E6EEF"
            android:contentDescription="@string/description_previous_button" />

        <ImageButton
            android:id="@+id/btn_next_notification"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/btn_play_notification"
            android:background="@drawable/ic_next"
            android:backgroundTint="#7E6EEF"
            android:contentDescription="@string/description_next_button" />

        <TextView
            android:id="@+id/txt_current_music_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:fontFamily="sans-serif-condensed"
            android:marqueeRepeatLimit="marquee_forever"
            android:requiresFadingEdge="horizontal"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/text_long"
            android:textAlignment="center"
            android:textColor="#7E6EEF"
            android:textSize="14sp"
            app:fontFamily="sans-serif-condensed">

            <requestFocus />
        </TextView>

        <TextView
            android:id="@+id/txt_duration_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_play_notification"
            android:layout_centerHorizontal="true"
            android:ellipsize="marquee"
            android:fontFamily="sans-serif-condensed"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/text_short"
            android:textAlignment="center"
            android:textColor="#7E6EEF"
            android:textSize="12sp"
            app:fontFamily="sans-serif-condensed" />
    </RelativeLayout>
</RelativeLayout>
