<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.jean.jcplayer.view.JcPlayerView">

    <TextView
        android:id="@+id/txtCurrentMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="2"
        android:scrollHorizontally="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtCurrentDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/play_initial_time"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentMusic"
        app:layout_goneMarginTop="8dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/txtDuration"
        app:layout_constraintStart_toEndOf="@id/txtCurrentDuration"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentMusic"
        app:layout_goneMarginTop="8dp" />

    <TextView
        android:id="@+id/txtDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/play_initial_time"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentMusic"
        app:layout_goneMarginTop="8dp" />

    <ImageButton
        android:id="@+id/btnRandom"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_shuffle"
        android:contentDescription="@string/description_shuffle_button"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/btnPrev"
        app:layout_constraintEnd_toStartOf="@id/view_stub"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toTopOf="@id/btnPrev"
        app:layout_goneMarginEnd="8dp" />

    <ImageButton
        android:id="@+id/btnRandomIndicator"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:background="@null"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_stub"
        app:layout_constraintEnd_toStartOf="@id/view_stub"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:srcCompat="@drawable/ic_fiber_manual_record"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view_stub"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toTopOf="@id/btnPrev" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_play"
        android:contentDescription="@string/description_play_button"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/view_stub"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toTopOf="@id/view_stub" />

    <ImageButton
        android:id="@+id/btnRepeat"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_repeat"
        android:contentDescription="@string/description_repeat_button"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/view_stub"
        app:layout_constraintTop_toTopOf="@id/btnNext"
        app:layout_goneMarginStart="8dp" />

    <ImageButton
        android:id="@+id/btnRepeatIndicator"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:background="@null"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_stub"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/view_stub"
        app:srcCompat="@drawable/ic_fiber_manual_record"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnRepeatOne"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_repeat_one"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/view_stub"
        app:layout_constraintTop_toTopOf="@id/btnNext"
        app:layout_goneMarginStart="8dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnPause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_pause"
        android:contentDescription="@string/description_play_button"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_stub"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toTopOf="@id/view_stub" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_next"
        android:contentDescription="@string/description_next_button"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ProgressBar
        android:id="@+id/progressBarPlayer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_stub"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@id/view_stub"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_previous"
        android:contentDescription="@string/description_previous_button"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

</android.support.constraint.ConstraintLayout>
